fix home h1 on one line on mobile

--- a/assets/sass/partials/_home.scss
+++ b/assets/sass/partials/_home.scss
@@ -59,6 +59,10 @@
 .home-title__h1 {
   margin: 0 0 $su 0;
 
+  @media screen and (min-width:310px) and (max-width:360px) {
+    font-size:24px;
+  }
+
   @media screen and (min-width:768px) {
     margin-left:$su*2;
   }
